// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wordSpacing renders 0 1`] = `
Array [
  .c0 {
  word-spacing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wordSpacing renders function 1`] = `
Array [
  .c0 {
  word-spacing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: has;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wordSpacing renders invalid theme path 1`] = `
Array [
  .c0 {
  word-spacing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wordSpacing renders negative number 1`] = `
Array [
  .c0 {
  word-spacing: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`wordSpacing renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    word-spacing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-spacing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    word-spacing: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-spacing: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-spacing: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-spacing: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-spacing: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordSpacing renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    word-spacing: July;
  }
}

@media April {
  .c0 {
    word-spacing: August;
  }
}

@media January {
  .c0 {
    word-spacing: September;
  }
}

@media April {
  .c0 {
    word-spacing: November;
  }
}

@media June {
  .c0 {
    word-spacing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    word-spacing: July;
  }
}

@media April {
  .c0 {
    word-spacing: August;
  }
}

@media January {
  .c0 {
    word-spacing: September;
  }
}

@media April {
  .c0 {
    word-spacing: November;
  }
}

@media June {
  .c0 {
    word-spacing: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-spacing: January;
  }
}

@media April {
  .c0 {
    word-spacing: December;
  }
}

@media January {
  .c0 {
    word-spacing: April;
  }
}

@media April {
  .c0 {
    word-spacing: May;
  }
}

@media June {
  .c0 {
    word-spacing: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-spacing: January;
  }
}

@media April {
  .c0 {
    word-spacing: December;
  }
}

@media January {
  .c0 {
    word-spacing: April;
  }
}

@media April {
  .c0 {
    word-spacing: May;
  }
}

@media June {
  .c0 {
    word-spacing: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordSpacing renders postitive number 1`] = `
Array [
  .c0 {
  word-spacing: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`wordSpacing renders string 1`] = `
Array [
  .c0 {
  word-spacing: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: June;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wordSpacing renders valid theme path 1`] = `
Array [
  .c0 {
  word-spacing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-spacing: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
